Fix for modal header disappearing on Safari

--- a/src/app/assets/stylesheets/_timings.scss
+++ b/src/app/assets/stylesheets/_timings.scss
@@ -20,6 +20,8 @@
     position: relative;
     top: 25%;
   }
+
+  -webkit-transform: translateZ(0);
 }
 
 #open-contribute {
